tests/files/type_checker_tests/should_fail/113.cmdr
//Should fail post-decrement on something of incorrect type
a = "hi";
a--;
